Rewrite a lot of code, close Business/CommonBugs#3, close Business/CommonBugs#4, close #9

--- a/langs/en/api.json
+++ b/langs/en/api.json
@@ -1,3 +1,5 @@
 {
-    "user does not exist": "User does not exist."
+    "user does not exist": "User does not exist.",
+    "group does not exist": "Group does not exist.",
+    "login successful": "Login successful."
 }
