Add cards for security and sync pages

--- a/langs/en/cards.json
+++ b/langs/en/cards.json
@@ -5,5 +5,7 @@
     "Manage users, permissions, and security": "Manage users, permissions, and security",
     "Checkout customers and manage online orders": "Checkout customers and manage online orders",
     "Build websites and manage contact form messages": "Build websites and manage contact form messages",
-    "Track jobs and assigned tasks": "Track jobs and assigned tasks"
+    "Track jobs and assigned tasks": "Track jobs and assigned tasks",
+    "Change password, setup 2-factor, and change Station PIN": "Change password, setup 2-factor, and change Station PIN",
+    "Connect mobile devices to AccountHub": "Connect mobile devices to AccountHub"
 }
