Add "all caught up" message when no notifications to show

--- a/langs/en/notifications.json
+++ b/langs/en/notifications.json
@@ -2,5 +2,6 @@
     "Notifications": "Notifications",
     "Notification deleted.": "Notification deleted.",
     "Mark as read": "Mark as read",
-    "Delete": "Delete"
+    "Delete": "Delete",
+    "All caught up!": "All caught up!"
 }
