--- a/langs/en/sync.json
+++ b/langs/en/sync.json
@@ -9,5 +9,8 @@
     "manual setup": "Manual Setup:",
     "sync key": "Sync key:",
     "url": "URL:",
-    "sync code name": "Device nickname"
+    "sync code name": "Device nickname",
+    "notification feed explained": "You can receive notifications via a RSS or ATOM news reader by clicking one of the buttons or manually adding a URL.  Click the Reset button if you think someone else might know your feed URL (you'll need to delete and re-add the feed on all your devices).",
+    "Reset": "Reset",
+    "Feed key reset.": "Feed key reset."
 }
