--- a/langs/en/cards.json
+++ b/langs/en/cards.json
@@ -1,4 +1,5 @@
 {
+    "Create virtual notes and lists": "Create virtual notes and lists",
     "Punch in and check work schedule": "Punch in and check work schedule",
     "Manage physical items": "Manage physical items",
     "Create and publish e-newsletters": "Create and publish e-newsletters",
