--- a/langs/en/sync.json
+++ b/langs/en/sync.json
@@ -1,7 +1,7 @@
 {
     "sync mobile": "Sync Mobile App",
     "scan sync qrcode": "Scan this code with the mobile app or enter the code manually.",
-    "sync explained": "Access your account and apps on the go.  Use a sync code to securely connect your phone or tablet to AccountHub with the Netsyms Business mobile app.",
+    "sync explained": "Access your account and apps on the go.  Use a sync code to securely connect your phone or tablet to {site_name} with the Netsyms mobile app.",
     "generate sync": "Create new sync code",
     "active sync codes": "Active codes",
     "no active codes": "No active codes.",
