Add new more flexible login flow

--- a/langs/en/titles.json
+++ b/langs/en/titles.json
@@ -4,5 +4,6 @@
     "account options": "Account options",
     "sync": "Sync settings",
     "settings": "Settings",
-    "account": "Account"
+    "account": "Account",
+    "Home": "Home"
 }
