Update security card text

--- a/langs/en/cards.json
+++ b/langs/en/cards.json
@@ -7,6 +7,7 @@
     "Checkout customers and manage online orders": "Checkout customers and manage online orders",
     "Build websites and manage contact form messages": "Build websites and manage contact form messages",
     "Track jobs and assigned tasks": "Track jobs and assigned tasks",
-    "Change password, setup 2-factor, and change Station PIN": "Change password, setup 2-factor, and change Station PIN",
+    "Change password, setup 2-factor, and add app passwords": "Change password, setup 2-factor, and add app passwords",
+    "Change password, setup 2-factor, add app passwords, and change PIN": "Change password, setup 2-factor, add app passwords, and change PIN",
     "Connect mobile devices to AccountHub": "Connect mobile devices to AccountHub"
 }
