Update sync settings card text

--- a/langs/en/cards.json
+++ b/langs/en/cards.json
@@ -9,5 +9,5 @@
     "Track jobs and assigned tasks": "Track jobs and assigned tasks",
     "Change password, setup 2-factor, and add app passwords": "Change password, setup 2-factor, and add app passwords",
     "Change password, setup 2-factor, add app passwords, and change PIN": "Change password, setup 2-factor, add app passwords, and change PIN",
-    "Connect mobile devices to AccountHub": "Connect mobile devices to AccountHub"
+    "Connect mobile devices to {name} and get notifications": "Connect mobile devices to {name} and get notifications"
 }
